hier-flatten/objects/Hierarchy_Test__c/fields/Hierarchy_Test__c.object-meta.xml
<CustomObject>
    <label>Hierarchy Test</label>
    <nameField>
        <label>Hierarchy Name</label>
        <type>Text</type>
    </nameField>
    <pluralLabel>Hierarchy Tests</pluralLabel>
    <sharingModel>Private</sharingModel>
</CustomObject>