hier-flatten/objects/Hierarchy_Test__c/fields/Code__c.field-meta.xml
<CustomField>
    <fullName>Code__c</fullName>
    <externalId>true</externalId>
    <label>Code</label>
    <length>128</length>
    <type>Text</type>
</CustomField>