hier-flatten/objects/Hierarchy_Test__c/fields/Level__c.field-meta.xml
<CustomField>
    <fullName>Level__c</fullName>
    <label>Level</label>
    <precision>8</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>