hier-flatten/objects/Hierarchy_Test__c/fields/Parent_Code__c.field-meta.xml
<CustomField>
    <fullName>Parent_Code__c</fullName>
    <externalId>true</externalId>
    <label>Parent Code</label>
    <length>128</length>
    <type>Text</type>
</CustomField>