hier-flatten/objects/Hierarchy_Test__c/fields/Parent_Level_1__c.field-meta.xml
<CustomField>
    <fullName>Parent_Level_1__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>Parent Level 1</label>
    <referenceTo>Hierarchy_Test__c</referenceTo>
    <relationshipLabel>Subtree Level 1</relationshipLabel>
    <relationshipName>Subtree_Level_1</relationshipName>
    <type>Lookup</type>
</CustomField>