hier-flatten/objects/Hierarchy_Test__c/fields/Parent_Level_2__c.field-meta.xml
<CustomField>
    <fullName>Parent_Level_2__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>Parent Level 2</label>
    <referenceTo>Hierarchy_Test__c</referenceTo>
    <relationshipLabel>Subtree Level 2</relationshipLabel>
    <relationshipName>Subtree_Level_2</relationshipName>
    <type>Lookup</type>
</CustomField>